<resources>
    <string name="app_name" translatable="false">StudentEat</string>
    <string name="splash_title">StudentEat\ncook &amp; share!</string>
    <string name="open_drawer_title" translatable="false">Navigation</string>
    <string name="search_title" translatable="false">Search</string>

    <string name="upload_dialog_caption">Uploading…</string>
    <string name="loading_dialog_caption">Loading…</string>

    <string name="navigation_drawer_recent_recipes_text">Recent recipes</string>
    <string name="navigation_drawer_add_new_recipe_text">Add new recipe</string>
    <string name="navigation_drawer_filter_and_sort_title">Filter and sort</string>
    <string name="navigation_drawer_my_recipes_title">My recipes</string>
    <string name="navigation_drawer_favorite_recipes_title">Favorite recipes</string>
    <string name="navigation_drawer_display_help_title">Display help</string>
    <string name="navigation_drawer_sign_out_title">Sign out</string>

    <string name="recents_action_bar_title" translatable="false">Recent recipes</string>
    <string name="logo_content_description" translatable="false">StudentEat logo - hamburger!</string>
    <string name="card_image_description" translatable="false">Nice thumbnail of a dish</string>
    <string name="dish_content_description" translatable="false">Beautiful dish</string>
    <string name="recipe_details_description_title" translatable="false">Description</string>
    <string name="recipe_details_ingredients_title" translatable="false">Ingredients</string>
    <string name="recipe_details_steps_title" translatable="false">Steps</string>
    <string name="recipe_details_comments_title" translatable="false">Comments</string>

    <string name="recipe_details_category_description">Category</string>
    <string name="recipe_details_time_description">Time to cook</string>
    <string name="recipe_details_difficulty_description">Difficulty</string>
    <string name="recipe_details_rating_description">Users\' rating</string>
    <string name="recipe_details_price_description">Estimated price</string>
    <string name="recipe_details_size_description">Number of portions</string>
    <string name="recipe_details_favorite_description">People\'s favorite</string>
    <string name="recipe_details_cooked_description">People who cooked it</string>

    <string name="recipe_details_rating_label">Your rating?</string>
    <string name="recipe_details_rating_accept">Set rating</string>
    <string name="recipe_details_set_cooked">Didn\'t cook it</string>
    <string name="recipe_details_set_not_cooked">Cooked it</string>
    <string name="recipe_details_set_favorite">Not my favorite</string>
    <string name="recipe_details_set_not_favorite">My favorite</string>
    <string name="recipe_details_no_rating_set_message">Press the stars to give rating.</string>
    <string name="recipe_details_remove_recipe_text">Remove this recipe</string>
    <string name="remove_recipe_question">Are you sure you want to remove it?</string>
    <string name="remove_recipe_ok">OK</string>
    <string name="remove_recipe_cancel">Cancel</string>

    <string name="difficulty_banal" translatable="false">Banal</string>
    <string name="difficulty_easy" translatable="false">Easy</string>
    <string name="difficulty_medium" translatable="false">Medium</string>
    <string name="difficulty_hard" translatable="false">Hard</string>
    <string name="difficulty_extreme" translatable="false">Extreme</string>

    <string name="dish_category_salad" translatable="false">Salad</string>
    <string name="dish_category_drink" translatable="false">Drink</string>
    <string name="dish_category_sandwich" translatable="false">Sandwich</string>
    <string name="dish_category_soup" translatable="false">Soup</string>
    <string name="dish_category_dessert" translatable="false">Dessert</string>
    <string name="dish_category_pizza" translatable="false">Pizza</string>
    <string name="dish_category_pasta" translatable="false">Pasta</string>
    <string name="dish_category_fast_food" translatable="false">Fast food</string>
    <string name="dish_category_main_course" translatable="false">Main course</string>
    <string name="dish_category_snack" translatable="false">Snack</string>

    <string name="measure_type_ml" translatable="false">ml</string>
    <string name="measure_type_cl" translatable="false">cl</string>
    <string name="measure_type_l" translatable="false">l</string>
    <string name="measure_type_mg" translatable="false">mg</string>
    <string name="measure_type_g" translatable="false">g</string>
    <string name="measure_type_kg" translatable="false">kg</string>
    <string name="measure_type_teaspoon" translatable="false">tsp</string>
    <string name="measure_type_spoon" translatable="false">tbs</string>
    <string name="measure_type_cup" translatable="false">cup</string>
    <string name="measure_type_pinch" translatable="false">pch</string>
    <string name="measure_type_piece" translatable="false">pcs</string>

    <string name="new_recipe_action_bar_title" translatable="false">Make a new recipe</string>
    <string name="new_recipe_photo_hint" translatable="false">Photo of your delicious dish</string>
    <string name="new_recipe_photo_picker_dialog_title">Pick photo from</string>
    <string-array name="new_recipe_photo_picker_dialog_options">
        <item>Camera</item>
        <item>File</item>
        <item>Cancel</item>
    </string-array>
    <string name="new_recipe_photo_picker_unsuccessful">Something went wrong</string>
    <string name="new_recipe_photo_picker_unsuccessful_retry">Retry</string>
    <string name="new_recipe_camera_no_permission">You must grant asked permissions.</string>
    <string name="new_recipe_name_hint" translatable="false">Recipe name</string>
    <string name="new_recipe_description_hint" translatable="false">Brief description</string>
    <string name="new_recipe_size_hint">For how many people?</string>
    <string name="new_recipe_difficulty_spinner_hint" translatable="false">Difficulty of preparation</string>
    <string name="new_recipe_category_spinner_hint" translatable="false">Which category?</string>
    <string name="new_recipe_submit_button_text" translatable="false">Submit recipe</string>
    <string name="new_recipe_submit_error">Make sure you have filled all the blanks
    and used at least one step and one ingredient. Don\'t forget about the photo!</string>
    <string name="new_recipe_on_complete_message">Recipe uploaded!</string>
    <string name="new_recipe_on_failure_message_prelude">Error: </string>
    <string name="recipe_details_new_rating_set">Rating sent!</string>

    <string name="recipe_description_remove_complete">Recipe removed!</string>
    <string name="recipe_not_found_error">Recipe not found!</string>

    <string name="new_ingredient_section_header" translatable="false">List of ingredients</string>
    <string name="new_ingredient_name_hint" translatable="false">Ingredient name</string>
    <string name="new_ingredient_amount_hint" translatable="false">Amount</string>
    <string name="new_ingredient_cost_hint" translatable="false">Cost</string>
    <string name="new_ingredient_add" translatable="false">Add a new ingredient</string>
    <string name="new_ingredient_remove_text" translatable="false">Remove</string>

    <string name="new_step_section_header" translatable="false">List of steps</string>
    <string name="new_step_description_hint" translatable="false">A brief description of this step</string>
    <string name="new_step_minutes_hint" translatable="false">How many minutes?</string>
    <string name="new_step_add" translatable="false">Add a new step</string>
    <string name="new_step_remove_text" translatable="false">Remove</string>

    <string name="filter_action_bar_title" translatable="false">Filter and sort</string>
    <string name="filter_full_name_hint" translatable="false">Author\'s full name</string>
    <string name="filter_recipe_name_hint" translatable="false">Recipe name contains</string>
    <string name="filter_time_hint" translatable="false">Minutes at most</string>
    <string name="filter_price_hint" translatable="false">Maximum price</string>
    <string name="filter_rating_hint" translatable="false">Rating at least</string>
    <string name="filter_size_hint" translatable="false">Number of portions</string>
    <string name="filter_difficulty_label" translatable="false">No more difficult than</string>
    <string name="filter_categories_section_header" translatable="false">Pick categories</string>
    <string name="filter_ingredients_section_header" translatable="false">Filter ingredients</string>
    <string name="filter_ingredient_hint" translatable="false">Ingredient</string>
    <string name="filter_ingredient_remove_text" translatable="false">Remove</string>
    <string name="filter_add_ingredient_text" translatable="false">Filter new ingredient</string>
    <string name="sort_label" translatable="false">Sort by</string>
    <string-array name="sorting_types" translatable="false">
        <item>Nothing</item>
        <item>Time</item>
        <item>Price</item>
        <item>Rating</item>
        <item>Size</item>
        <item>By favorites</item>
        <item>By cooked number</item>
    </string-array>
    <string name="filter_submit_button_text" translatable="false">Submit query</string>

    <string name="filtered_results_action_bar_title">Filtered results</string>

    <string name="my_results_action_bar_title">My recipes</string>

    <string name="help_screen_action_bar_title">Help</string>
    <string name="app_help_text">
        Thank you for using StudentEat.\n\n
        In order to use the application, you should have a working Internet connection.\n
        You can see recent recipes just as you enter the app and view each recipe\'s details.\n
        You can also create new recipes by pressing the floating + button.\n
        Navigating the app is possible by swiping right from the left side of the screen.\n
        If you wish to filter and sort recipes, just click the magnifying glass icon.\n\n
        App created for Object-Oriented Programming course at AGH UST by Jarosław Bieniek (Shino1024).
    </string>

    <string name="logged_out_message">Logged out</string>
</resources>
