<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@id/navigation_drawer_recent_recipes"
            android:title="@string/navigation_drawer_recent_recipes_text" />

        <item
            android:id="@id/navigation_drawer_add_new_recipe"
            android:title="@string/navigation_drawer_add_new_recipe_text" />

        <item
            android:id="@id/navigation_drawer_filter_and_sort"
            android:title="@string/navigation_drawer_filter_and_sort_title" />

        <item
            android:id="@id/navigation_drawer_my_recipes"
            android:title="@string/navigation_drawer_my_recipes_title" />

        <item
            android:id="@id/navigation_drawer_display_help"
            android:title="@string/navigation_drawer_display_help_title" />

        <item
            android:id="@id/navigation_drawer_sign_out"
            android:title="@string/navigation_drawer_sign_out_title" />

    </group>

</menu>