<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@id/new_step_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_step_description_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@id/new_ingredient_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/new_ingredient_amount_hint" />

        <Spinner
            android:id="@id/new_ingredient_measure_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <EditText
            android:id="@id/new_ingredient_cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/new_ingredient_cost_hint" />

        <Button
            android:id="@id/new_ingredient_remove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/new_ingredient_remove_text" />

    </LinearLayout>

</LinearLayout>