<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_details_rating_label"
            android:textSize="20sp" />

        <RatingBar
            android:id="@id/recipe_details_rating_bar"
            android:theme="@style/RatingBarTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:numStars="6"
            android:stepSize="0.1"
            android:rating="0.0" />

        <Button
            android:id="@id/recipe_details_give_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_details_rating_accept" />

        <Button
            android:id="@id/recipe_details_cooked_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_details_set_cooked" />

        <Button
            android:id="@id/recipe_details_favorite_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_details_set_favorite" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>