<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@id/recipe_details_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/full_black"
            android:singleLine="true"
            android:textSize="30sp" />

        <android.support.v7.widget.CardView
            android:id="@id/recipe_details_statistics_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardUseCompatPadding="true"
            app:cardElevation="2dp">

            <android.support.v7.widget.GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:alignmentMode="alignBounds"
                app:rowCount="4"
                app:columnCount="2">

                <LinearLayout
                    android:id="@id/recipe_details_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="0"
                    app:layout_column="0">

                    <ImageView
                        android:id="@id/recipe_details_category_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/category"
                        android:contentDescription="@string/recipe_details_category_description" />

                    <TextView
                        android:id="@id/recipe_details_category_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@id/recipe_details_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="0"
                    app:layout_column="1">

                    <ImageView
                        android:id="@id/recipe_details_time_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/clock"
                        android:contentDescription="@string/recipe_details_time_description" />

                    <TextView
                        android:id="@id/recipe_details_time_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@id/recipe_details_difficulty"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="1"
                    app:layout_column="0">

                    <ImageView
                        android:id="@id/recipe_details_difficulty_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/signal"
                        android:contentDescription="@string/recipe_details_difficulty_description" />

                    <TextView
                        android:id="@id/recipe_details_difficulty_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@id/recipe_details_rating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="1"
                    app:layout_column="1">

                    <ImageView
                        android:id="@id/recipe_details_rating_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/star"
                        android:contentDescription="@string/recipe_details_rating_description" />

                    <TextView
                        android:id="@id/recipe_details_rating_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@id/recipe_details_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="2"
                    app:layout_column="0">

                    <ImageView
                        android:id="@id/recipe_details_price_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/money"
                        android:contentDescription="@string/recipe_details_price_description" />

                    <TextView
                        android:id="@id/recipe_details_price_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@id/recipe_details_size"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="2"
                    app:layout_column="1">

                    <ImageView
                        android:id="@id/recipe_details_size_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/people"
                        android:contentDescription="@string/recipe_details_size_description" />

                    <TextView
                        android:id="@id/recipe_details_size_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@id/recipe_details_favorite"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="3"
                    app:layout_column="0">

                    <ImageView
                        android:id="@id/recipe_details_favorite_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/favorite"
                        android:contentDescription="@string/recipe_details_favorite_description" />

                    <TextView
                        android:id="@id/recipe_details_favorite_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@id/recipe_details_cooked"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    app:layout_columnWeight="1"
                    app:layout_rowWeight="1"
                    app:layout_gravity="fill_horizontal"
                    app:layout_row="3"
                    app:layout_column="1">

                    <ImageView
                        android:id="@id/recipe_details_cooked_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/cooked"
                        android:contentDescription="@string/recipe_details_cooked_description" />

                    <TextView
                        android:id="@id/recipe_details_cooked_text"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:textColor="@color/full_black"
                        android:textSize="20sp" />

                </LinearLayout>

            </android.support.v7.widget.GridLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@id/recipe_details_dish_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Button
            android:id="@id/recipe_details_remove_recipe_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_details_remove_recipe_text" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>